<resources>
    <string name="app_name">Tap card</string>
    <string name="tokenize">Tokenize</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="card_name">Card Holder</string>
    <string name="addons">ADDONS</string>
    <string name="fields">FieldVisibility</string>
    <string name="display_payment_brands">Display Payment Brands</string>
    <string name="display_card_scanning">Scanner</string>
    <string name="display_nfc">Nfc</string>
    <string name="operation">Operator</string>
    <string name="sandbox">SandBox</string>
    <string name="production">Production</string>
    <string name="sandbox_key">Public Key</string>
    <string name="transaction">Transaction</string>
    <string name="amount">Amount</string>
    <string name="acceptance">Acceptance</string>
    <string name="supported_brands">Supported scheme</string>
    <string name="supported_scheme">Supported scheme</string>

    <string name="scope_title">Scope</string>
    <string name="interface_">Interface</string>
    <string name="scanner_border_color">Scanner Border Color</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="card_edges">Card Edges</string>
    <string name="curved">curved</string>
    <string name="straight">flat</string>
    <string name="display_powerdby_logo">powered</string>
    <string name="done">Done</string>
    <string name="production_key">Production Key</string>
    <string name="merchant_id">Merchant id</string>
    <string name="credit">CREDIT</string>
    <string name="debit">DEBIT</string>
    <string name="all">ALL</string>
    <string name="threeds">ThreeDs</string>
    <string name="emv">EMV</string>
    <string name="show_save">Show Save Switch</string>
    <string name="ltr">ltr</string>
    <string name="rtl">dynamic</string>
    <string name="card_directions">Card Direction</string>
    <string name="merchant">edit customer info</string>
    <string name="id">id</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="editable">Editable</string>
    <string name="edit_transaction_title">Edit Transaction</string>
    <string name="transaction_descr">Transaction Description</string>
    <string name="Authenticate">AuthenticatedToken</string>
    <string name="Token">Token</string>
    <string name="currency">Currency</string>
    <string name="order_id">Order id</string>
    <string name="order_desc">Order Description</string>
    <string name="trans_refrence">Reference</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_id">Invoice id</string>
    <string name="post">Post</string>
    <string name="post_url">url</string>
    <string name="purpose">Purpose</string>
    <string name="order">Order</string>
    <string name="features">Features</string>
    <string name="redirect">Redirect</string>
    <string name="card_cvv">CVV</string>
    <string name="colored">colored</string>
    <string name="monochrome">monochrome</string>
    <string name="colorStyle">ColorStyle</string>
    <string name="supportedPaymentAuthentications">supportedPaymentAuthentications</string>
    <string name="redirect_url"> url </string>
    <string name="saveCard">Save Card</string>
    <string name="autoSaveCard">Auto Save Card</string>
    <string name="loading">Loading</string>
    <string name="supportedFundSource">Supported Fund Source</string>
    <string name="display_holdername">Card Holder</string>
    <string name="display_CVV">CVV</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="payment_agreement_id">Payment agreement id </string>
    <string name="payment_agreement_contract">Payment agreement contract </string>
    <string name="prefill_cards">Prefill Card</string>
    <string name="cardNumber">Card number</string>
    <string name="cardName">Card Holder Name</string>
    <string name="customerId">Customer id</string>
    <string name="cardExpiry">Card Expiry YEAR 2025</string>

    <string-array name="ScopeList">
        <item>Token</item>
        <item>AuthenticatedToken</item>
       <!-- <item>SaveToken</item>-->
<!--        <item>SaveAuthenticatedToken</item>-->
    </string-array>

    <string-array name="ScopeList_default_values">
        <item>1</item>
    </string-array>

    <string-array name="PurposeList">
        <item>CHARGE</item>
        <item>AUTHORIZE</item>
        <item>SAVE TOKEN</item>



        <!--        <item>Save Card</item>-->
<!--        <item>Verify Cardholder</item>-->
<!--        <item>Order Transaction</item>-->
<!--        <item>Subscription Transaction</item>-->
<!--        <item>Billing Transaction</item>-->
<!--        <item>Installment Transaction</item>-->
<!--        <item>Milestone Transaction</item>-->

    </string-array>

    <string-array name="SupportedFundSource">
        <item>CREDIT</item>
        <item>DEBIT</item>
    </string-array>


    <string-array name="SupportedFundSourceValues">
        <item>1</item>
    </string-array>

    <string-array name="SupportedPaymentAuthentication">
        <item>3DS</item>
    </string-array>

    <string-array name="SupportedPaymentAuthenticationValues">
        <item>1</item>
    </string-array>

    <string-array name="SupportedSchemes">
        <item>MADA</item>
        <item>VISA</item>
        <item>MASTERCARD</item>
        <item>AMERICAN_EXPRESS</item>
        <item>OMANNET</item>
        <item>MEEZA</item>

    </string-array>

    <string-array name="Lanugages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="LanugagesValues">
        <item>en</item>
        <item>ar</item>
    </string-array>

    <string-array name="Theme">
        <item>device</item>
        <item>light</item>
        <item>dark</item>
        <item>dynamic</item>
    </string-array>

    <string-array name="Edges">
        <item>flat</item>
        <item>curved</item>
        <item>circular</item>
        <item>dynamic</item>
    </string-array>

    <string-array name="Direction">
        <item>dynamic</item>
        <item>ltr</item>
        <item>RTL</item>
    </string-array>


    <string-array name="colorStyle">
        <item>colored</item>
        <item>monochrome</item>
    </string-array>

    <string-array name="cardExpiryList">
        <item>01/25</item>
        <item>02/25</item>
        <item>03/25</item>
        <item>04/25</item>
        <item>05/25</item>
        <item>06/25</item>
        <item>07/25</item>
        <item>08/25</item>

    </string-array>





    <string-array name="currencies">
        <item>KWD</item>
        <item>AED</item>
        <item>SAR</item>
        <item>BHD</item>
       <item> EGP</item>
        <item>USD</item>
        <item>QAR</item>
        <item> OMR</item>



    </string-array>
    <string-array name="PurposeList_default_values">
        <item>1</item>
    </string-array>

    <string name="app_title">Tap Card SDK</string>
    <string name="configuration_title">Configuration</string>
    <string name="edit_configuration">Configure</string>
    <string name="callbacks_title">Callbacks</string>
    <string name="callbacks_empty">Waiting for the card form to load.</string>
    <string name="callbacks_count">%1$d received</string>
    <string name="copy_configuration">Copy</string>
    <string name="copied">Configuration copied</string>
    <string name="field_cvv">CVV</string>
    <string name="field_card_holder">Card holder</string>
    <string name="style_monochrome">Monochrome</string>
    <string name="language_arabic">Arabic</string>
    <string name="theme_device">Device</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
</resources>
