<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © Marc Auberer 2020-2022. All rights reserved
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        app:title="@string/operation">

        <EditTextPreference
            app:key="publicKey"
            app:defaultValue="pk_test_YhUjg9PNT8oDlKJ1aE2fMRz7"
            app:title="Public Key"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory  app:title="@string/scope_title">

        <DropDownPreference
            app:key="scopeKey"
            app:entries="@array/ScopeList"
            app:entryValues="@array/ScopeList"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>



    <PreferenceCategory android:title="@string/purpose">


        <DropDownPreference
            app:key="purposeKey"
            app:entries="@array/PurposeList"
            app:entryValues="@array/PurposeList"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/transaction">

        <EditTextPreference
            app:key="paymentAgreementID"
            app:defaultValue=""
            app:title="Payment agreement id"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="paymentAgreementContract"
            app:defaultValue=""
            app:title="Payment agreement contract"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/order">

        <EditTextPreference
            app:key="orderIdKey"
            app:defaultValue=""
            app:title="@string/order_id"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="amountKey"
            app:defaultValue=""
            app:title="@string/amount"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="orderDescKey"
            app:defaultValue=""
            app:title="@string/order_desc"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="orderTransactionRefrence"
            app:defaultValue=""
            app:title="@string/trans_refrence"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/currency">


        <DropDownPreference
            app:key="selectedCurrencyKey"
            app:entries="@array/currencies"
            app:entryValues="@array/currencies"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>


    </PreferenceCategory>


    <PreferenceCategory
        app:title="@string/invoice">

        <EditTextPreference
            app:key="invoiceIdKey"
            app:defaultValue=""
            app:title="@string/invoice_id"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="merchantIdKey"
            app:defaultValue=""
            app:title="@string/merchant_id"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/features">
        <CheckBoxPreference
            app:key="showLoadingKey"
            app:title="@string/loading"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            app:key="displayPymtBrndKey"
            app:title="@string/display_payment_brands"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            app:key="displayScannerKey"
            app:title="@string/display_card_scanning"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            app:key="displayNFCKey"
            app:title="@string/display_nfc"
            android:defaultValue="true"
            />


        <CheckBoxPreference
            app:key="displaySaveCardKey"
            app:title="@string/saveCard"
            android:defaultValue="true"
            />


        <CheckBoxPreference
            app:key="displayAutosaveCardKey"
            app:title="@string/autoSaveCard"
            android:defaultValue="true"
            />



    </PreferenceCategory>


    <PreferenceCategory android:title="@string/acceptance">


        <MultiSelectListPreference
            app:key="supportedFundSourceKey"
            app:title="@string/supportedFundSource"
            app:entries="@array/SupportedFundSource"
            app:entryValues="@array/SupportedFundSource"
            app:defaultValue="@array/SupportedFundSource" />



        <MultiSelectListPreference
            app:key="supportedPaymentAuthenticationKey"
            app:title="@string/supportedPaymentAuthentications"
            app:entries="@array/SupportedPaymentAuthentication"
            app:entryValues="@array/SupportedPaymentAuthentication"
            app:defaultValue="@array/SupportedPaymentAuthenticationValues" />



        <MultiSelectListPreference
            app:key="selectedBrandsKey"
            app:title="@string/supported_scheme"
            app:entries="@array/SupportedSchemes"
            app:entryValues="@array/SupportedSchemes"
          />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/fields">
        <CheckBoxPreference
            app:key="displayHoldernameKey"
            app:title="Card Holder"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            app:key="displayCVVKey"
            app:title="@string/card_cvv"
            android:defaultValue="true"
            />





    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/interface_">

        <DropDownPreference
            app:key="selectedlangKey"
            app:title="@string/choose_language"
            app:entries="@array/Lanugages"
            app:entryValues="@array/LanugagesValues"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

        <DropDownPreference
            app:key="selectedthemeKey"
            app:title="@string/choose_theme"
            app:entries="@array/Theme"
            app:entryValues="@array/Theme"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

        <DropDownPreference
            app:key="selectedcardedgeKey"
            app:title="Card Edges"

            app:entries="@array/Edges"
            app:entryValues="@array/Edges"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

        <DropDownPreference
            app:key="selectedcardirectKey"
            app:title="Card Direction"

            app:entries="@array/Direction"
            app:entryValues="@array/Direction"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

        <DropDownPreference
            app:key="selectedcolorstyleKey"
            app:title="Color Style"
            app:entries="@array/colorStyle"
            app:entryValues="@array/colorStyle"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true"/>

        <CheckBoxPreference
            app:key="displayPoweredByKey"
            app:title="@string/display_powerdby_logo"
            android:defaultValue="true"
            />






    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/redirect">

        <EditTextPreference
            app:key="redirectUrlKey"
            app:defaultValue=""
            app:title="@string/post_url"
            app:useSimpleSummaryProvider="true"/>




    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/post">

        <EditTextPreference
            app:key="posturlKey"
            app:defaultValue=""

            app:title="@string/post_url"
            app:useSimpleSummaryProvider="true"/>




    </PreferenceCategory>

    <Preference
        app:key="dialog_preference"
        android:title="Done"
        app:summary="Tap to show Card" />

</PreferenceScreen>